top menu z-index fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -232,7 +232,6 @@ body {
   .main {
     padding: 5px;
     grid-gap: 5px;
-    margin-top: 70px;
   }
 
   .icons {
